<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <include
        android:id="@+id/title_layout"
        layout="@layout/fragment_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:text="@string/field_old_password"
        android:textColor="@color/colorTextLight"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_old_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/dp_8"
        android:background="@drawable/et_gray_radius"
        android:hint="@string/hint_old_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorTextDark"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:text="@string/field_new_password"
        android:textColor="@color/colorTextLight"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/dp_8"
        android:background="@drawable/et_gray_radius"
        android:hint="@string/hint_new_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorTextDark"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:text="@string/field_confirm_password"
        android:textColor="@color/colorTextLight"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/dp_8"
        android:background="@drawable/et_gray_radius"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textColor="@color/colorTextDark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/dp_16"
        android:background="@drawable/btn_bg_blue"
        android:text="@string/btn_confirm"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>