<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 高德地图视图 -->
    <com.amap.api.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_search"/>

    <!-- 搜索栏 -->
    <LinearLayout
        android:id="@+id/ll_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_16"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_48"
            android:layout_weight="1"
            android:background="@drawable/et_gray_radius"
            android:hint="@string/hint_car_number"
            android:paddingHorizontal="@dimen/dp_16"
            android:textSize="@dimen/sp_14"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_48"
            android:layout_marginStart="@dimen/dp_8"
            android:background="@drawable/btn_blue_radius"
            android:text="@string/btn_all_car"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"/>
    </LinearLayout>

    <!-- 车牌横向滚动栏 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/plate_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_search"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <FrameLayout
        android:id="@+id/layout_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_unlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|top"
            android:layout_marginTop="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/btn_white_radius"
            android:paddingHorizontal="@dimen/dp_8"
            android:paddingVertical="@dimen/dp_4"
            android:text="@string/unlogin"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_12"/>
    </FrameLayout>

    <!-- 右侧功能按钮组 -->
    <LinearLayout
        android:id="@+id/fun_btns_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_alarm"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/alarm"
            android:textSize="@dimen/sp_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_status"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/status"
            android:textSize="@dimen/sp_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_analysis"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/analysis"
            android:textSize="@dimen/sp_12"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_report"
            android:gravity="center"
            android:padding="@dimen/dp_8"
            android:text="@string/report"
            android:textSize="@dimen/sp_12"/>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>