<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg">

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintDimensionRatio="H,3:2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_login_banner"/>

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:background="@drawable/et_gray_radius"
        android:hint="@string/hint_account"
        android:paddingHorizontal="@dimen/dp_16"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@id/iv_banner"
        android:layout_marginTop="@dimen/dp_40"/>

    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@drawable/et_gray_radius"
        android:hint="@string/hint_pwd"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/dp_16"
        android:textSize="@dimen/sp_14"
        app:layout_constraintTop_toBottomOf="@id/et_account"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_48"
        android:layout_marginHorizontal="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/btn_blue_radius"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_16"
        app:layout_constraintTop_toBottomOf="@id/et_pwd"/>

    <CheckBox
        android:id="@+id/cb_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/agreement"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="@id/et_account"
        app:layout_constraintTop_toBottomOf="@id/btn_login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_40"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/tv_copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="@dimen/dp_24"
            android:layout_height="@dimen/dp_24"
            android:src="@drawable/ic_service"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:text="@string/contact_service"
            android:textColor="@color/text_black"
            android:textSize="@dimen/sp_16"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_16"
        android:text="@string/copyright"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/sp_10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>